@@ -212,6 +212,7 @@ import time
 import zlib
 
 from bzrlib import (
+    cache_utf8,
     debug,
     errors,
     inventory,
@@ -305,15 +306,6 @@ class DirState(object):
     def __init__(self, path):
         """Create a  DirState object.
 
-        Attributes of note:
-
-        :attr _root_entrie: The root row of the directory/file information,
-            - contains the path to / - '', ''
-            - kind of 'directory',
-            - the file id of the root in utf8
-            - size of 0
-            - a packed state
-            - and no sha information.
         :param path: The path at which the dirstate file on disk should live.
         """
         # _header_state and _dirblock_state represent the current state
@@ -897,6 +889,48 @@ class DirState(object):
             processed_dirs.update(pending_dirs)
         return found
 
+    def _discard_merge_parents(self):
+        """Discard any parents trees beyond the first.
+        
+        Note that if this fails the dirstate is corrupted.
+
+        After this function returns the dirstate contains 2 trees, neither of
+        which are ghosted.
+        """
+        self._read_header_if_needed()
+        parents = self.get_parent_ids()
+        if len(parents) < 1:
+            return
+        # only require all dirblocks if we are doing a full-pass removal.
+        self._read_dirblocks_if_needed()
+        dead_patterns = set([('a', 'r'), ('a', 'a'), ('r', 'r'), ('r', 'a')])
+        def iter_entries_removable():
+            for block in self._dirblocks:
+                deleted_positions = []
+                for pos, entry in enumerate(block[1]):
+                    yield entry
+                    if (entry[1][0][0], entry[1][1][0]) in dead_patterns:
+                        deleted_positions.append(pos)
+                if deleted_positions:
+                    if len(deleted_positions) == len(block):
+                        del block[1][:]
+                    else:
+                        for pos in reversed(deleted_positions):
+                            del block[1][pos]
+        # if the first parent is a ghost:
+        if parents[0] in self.get_ghosts():
+            empty_parent = [DirState.NULL_PARENT_DETAILS]
+            for entry in iter_entries_removable():
+                entry[1][1:] = empty_parent
+        else:
+            for entry in iter_entries_removable():
+                del entry[1][2:]
+
+        self._ghosts = []
+        self._parents = [parents[0]]
+        self._dirblock_state = DirState.IN_MEMORY_MODIFIED
+        self._header_state = DirState.IN_MEMORY_MODIFIED
+
     def _empty_parent_info(self):
         return [DirState.NULL_PARENT_DETAILS] * (len(self._parents) -
                                                     len(self._ghosts))
@@ -1126,6 +1160,184 @@ class DirState(object):
             result.unlock()
             raise
         return result
+
+    def update_basis_by_delta(self, delta, new_revid):
+        """Update the parents of this tree after a commit.
+
+        This gives the tree one parent, with revision id new_revid. The
+        inventory delta is applied to the current basis tree to generate the
+        inventory for the parent new_revid, and all other parent trees are
+        discarded.
+
+        Note that an exception during the operation of this method will leave
+        the dirstate in a corrupt state where it should not be saved.
+
+        Finally, we expect all changes to be synchronising the basis tree with
+        the working tree.
+
+        :param new_revid: The new revision id for the trees parent.
+        :param delta: An inventory delta (see apply_inventory_delta) describing
+            the changes from the current left most parent revision to new_revid.
+        """
+        self._read_dirblocks_if_needed()
+        self._discard_merge_parents()
+        if self._ghosts != []:
+            raise NotImplementedError(self.update_basis_by_delta)
+        if len(self._parents) == 0:
+            # setup a blank tree, the most simple way.
+            empty_parent = DirState.NULL_PARENT_DETAILS
+            for entry in self._iter_entries():
+                entry[1].append(empty_parent)
+            self._parents.append(new_revid)
+
+        self._parents[0] = new_revid
+
+        delta = sorted(delta, reverse=True)
+        adds = []
+        changes = []
+        deletes = []
+        # The paths this function accepts are unicode and must be encoded as we
+        # go.
+        encode = cache_utf8.encode
+        inv_to_entry = self._inv_entry_to_details
+        # delta is now (deletes, changes), (adds) in reverse lexographical
+        # order.
+        # deletes in reverse lexographic order are safe to process in situ.
+        # renames are not, as a rename from any path could go to a path
+        # lexographically lower, so we transform renames into delete, add pairs,
+        # expanding them recursively as needed.
+        # At the same time, to reduce interface friction we convert the input
+        # inventory entries to dirstate.
+        
+        for old_path, new_path, file_id, inv_entry in delta:
+            if old_path is None:
+                adds.append((None, encode(new_path), file_id,
+                    inv_to_entry(inv_entry)))
+            elif new_path is None:
+                deletes.append((encode(old_path), None, file_id, None))
+            elif old_path != new_path:
+                # Renames:
+                # Because renames must preserve their children we must have
+                # processed all reloations and removes before hand. The sort
+                # order ensures we've examined the child paths, but we also
+                # have to execute the removals, or the split to an add/delete
+                # pair will result in the deleted item being reinserted, or
+                # renamed items being reinserted twice - and possibly at the
+                # wrong place. Splitting into a delete/add pair also simplifies
+                # the handling of entries with ('f', ...), ('r' ...) because
+                # the target of the 'r' is old_path here, and we add that to
+                # deletes, meaning that the add handler does not need to check
+                # for 'r' items on every pass.
+                self._update_basis_apply_deletes(deletes)
+                deletes = []
+                new_path_utf8 = encode(new_path)
+                # Split into an add/delete pair recursively.
+                adds.append((None, new_path_utf8, file_id,
+                    inv_to_entry(inv_entry)))
+                # Remove the current contents of the tree at orig_path, and
+                # reinsert at the correct new path.
+                new_deletes = list(reversed(list(self._iter_child_entries(1,
+                    encode(old_path)))))
+                for entry in new_deletes:
+                    source_path = '/'.join(entry[0][0:2])
+                    target_path = new_path_utf8 + source_path[len(old_path):]
+                    adds.append((None, target_path, entry[0][2], entry[1][1]))
+                    deletes.append((source_path,  None, entry[0][2], None))
+                deletes.append((encode(old_path), None, file_id, None))
+            else:
+                changes.append((encode(old_path), encode(new_path), file_id,
+                    inv_to_entry(inv_entry)))
+
+        self._update_basis_apply_deletes(deletes)
+        self._update_basis_apply_changes(changes)
+        self._update_basis_apply_adds(adds)
+
+        # remove all deletes
+        self._dirblock_state = DirState.IN_MEMORY_MODIFIED
+        self._header_state = DirState.IN_MEMORY_MODIFIED
+        return
+
+    def _update_basis_apply_adds(self, adds):
+        """Apply a sequence of adds to tree 1 during update_basis_by_delta.
+
+        They may be adds, or renames that have been split into add/delete
+        pairs.
+
+        :param adds: A sequence of adds. Each add is a tuple:
+            (None, new_path_utf8, file_id, (entry_details))
+        """
+        # Adds are accumulated partly from renames, so can be in any input
+        # order - sort it.
+        adds.sort()
+        # adds is now in lexographic order, which places all parents before
+        # their children, so we can process it linearly.
+        absent = ('r', 'a')
+        for old_path, new_path, file_id, new_details in adds:
+            assert old_path is None
+            # the entry for this file_id must be in tree 0.
+            entry = self._get_entry(0, file_id, new_path)
+            if entry[0][2] != file_id:
+                raise errors.BzrError('dirstate: cannot apply delta, working'
+                    ' tree does not contain new entry %r %r' %
+                    (new_path, file_id))
+            if entry[1][1][0] not in absent:
+                raise errors.BzrError('dirstate: inconsistent delta, with '
+                    'tree 0. %r %r' % (new_path, file_id))
+            # We don't need to update the target of an 'r' because the handling
+            # of renames turns all 'r' situations into a delete at the original
+            # location.
+            entry[1][1] = new_details
+
+    def _update_basis_apply_changes(self, changes):
+        """Apply a sequence of changes to tree 1 during update_basis_by_delta.
+
+        :param adds: A sequence of changes. Each change is a tuple:
+            (path_utf8, path_utf8, file_id, (entry_details))
+        """
+        absent = ('a', 'r')
+        for old_path, new_path, file_id, new_details in changes:
+            assert old_path == new_path
+            # the entry for this file_id must be in tree 0.
+            entry = self._get_entry(0, file_id, new_path)
+            if entry[0][2] != file_id:
+                raise errors.BzrError('dirstate: cannot apply delta, working'
+                    ' tree does not contain new entry %r %r' %
+                    (new_path, file_id))
+            if (entry[1][0][0] in absent or
+                entry[1][1][0] in absent):
+                raise errors.BzrError('dirstate: inconsistent delta, with '
+                    'tree 0. %r %r' % (new_path, file_id))
+            entry[1][1] = new_details
+
+    def _update_basis_apply_deletes(self, deletes):
+        """Apply a sequence of deletes to tree 1 during update_basis_by_delta.
+
+        They may be deletes, or renames that have been split into add/delete
+        pairs.
+
+        :param adds: A sequence of deletes. Each delete is a tuple:
+            (old_path_utf8, None, file_id, None)
+        """
+        absent = ('r', 'a')
+        # Deletes are accumulated in lexographical order.
+        for old_path, new_path, file_id, _ in deletes:
+            assert new_path is None
+            # the entry for this file_id must be in tree 1.
+            dirname, basename = osutils.split(old_path)
+            block_index, entry_index, dir_present, file_present = \
+                self._get_block_entry_index(dirname, basename, 1)
+            if not file_present:
+                raise errors.BzrError('dirstate: cannot apply delta, basis'
+                    ' tree does not contain new entry %r %r' %
+                    (old_path, file_id))
+            entry = self._dirblocks[block_index][1][entry_index]
+            if entry[0][2] != file_id:
+                raise errors.BzrError('mismatched file_id in tree 1 %r %r' %
+                    (old_path, file_id))
+            if entry[1][0][0] not in absent:
+                raise errors.BzrError('dirstate: inconsistent delta, with '
+                    'tree 0. %r %r' % (old_path, file_id))
+            del self._dirblocks[block_index][1][entry_index]
 
     def update_entry(self, entry, abspath, stat_value,
                      _stat_to_minikind=_stat_to_minikind,
@@ -1526,6 +1738,37 @@ class DirState(object):
             raise Exception("can't pack %s" % inv_entry)
         return (minikind, fingerprint, size, executable, tree_data)
 
+    def _iter_child_entries(self, tree_index, path_utf8):
+        """Iterate over all the entries that are children of path_utf.
+
+        This only returns entries that are present (not in 'a', 'r') in 
+        tree_index. tree_index data is not refreshed, so if tree 0 is used,
+        results may differ from that obtained if paths were statted to
+        determine what ones were directories.
+
+        Asking for the children of a non-directory will return an empty
+        iterator.
+        """
+        pending_dirs = []
+        next_pending_dirs = [path_utf8]
+        absent = ('r', 'a')
+        while next_pending_dirs:
+            pending_dirs = next_pending_dirs
+            next_pending_dirs = []
+            for path in pending_dirs:
+                block_index, present = self._find_block_index_from_key(
+                    (path, '', ''))
+                if not present:
+                    # children of a non-directory asked for.
+                    continue
+                block = self._dirblocks[block_index]
+                for entry in block[1]:
+                    kind = entry[1][tree_index][0]
+                    if kind not in absent:
+                        yield entry
+                    if kind == 'd':
+                        next_pending_dirs.append('/'.join(entry[0][0:2]))
+    
     def _iter_entries(self):
         """Iterate over all the entries in the dirstate.
 
